[package]
name = "reinject-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI binary replacing all reinject shell scripts"
license = "MIT"

[[bin]]
name = "reinject"
path = "src/main.rs"

[dependencies]
reinject-core = { path = "../reinject-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
