[package]
name = "reinject-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Core library for context rot prevention — transcript parsing, throttle logic, state management"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
